[package]
name = "zaoraj-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.5.1"
actix-http = "=3.6.0"
tokio = "1.38.0"
serde = "1.0.203"
serde_derive = "1.0.203"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
env_logger = "0.11.3"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.10"
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.18.1"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls"] }